--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <frame src="superior.html" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame" />
   <frameset rows="*" cols="279,*" framespacing="0" frameborder="no" border="0">
     <frame src="izquierdo.HTML" name="leftFrame" scrolling="No" noresize="noresize" id="leftFrame" title="leftFrame" />
-    <frame src="centro.html" name="mainFrame" id="mainFrame" title="mainFrame" />
+    <frame src="centro.HTML" name="mainFrame" id="mainFrame" title="mainFrame" />
   </frameset>
 </frameset>
 <noframes><body>
