--- a/izquierdo.HTML
+++ b/izquierdo.HTML
@@ -20,10 +20,10 @@ body {
     <th width="259" height="127" scope="col"><strong><img src="logo2.jpg" width="258" height="247" /></strong></th>
   </tr>
   <tr>
-    <td height="23"><h4 align="center"><a href="centro.HTML" target="mainFrame">INFORMACIÓN</a></h4></td>
+    <td height="23"><h4 align="center"><a href="centro.HTML" target="mainFrame">INFORMACION</a></h4></td>
   </tr>
   <tr>
-    <td height="30"><h4 align="center"><a href="modelos.html" target="mainFrame">MODELOS DE CELULARES </a></h4></td>
+    <td height="23"><h4 align="center"><a href="modelos.html" target="mainFrame">MODELOS DE CELULARES </a></h4></td>
   </tr>
   <tr>
     <td height="23"><h4 align="center"><a href="lanzamientos.html" target="mainFrame">NUEVOS CELULARES </a></h4></td>
